--- a/app/src/main/res/layout/manager_list_item_layout.xml
+++ b/app/src/main/res/layout/manager_list_item_layout.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_pokazatZayavku"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:orientation="vertical"
-    android:weightSum="100"
+    android:layout_height="wrap_content"
     android:clickable="true"
-    android:onClick="onClick"
     android:foreground="?android:attr/selectableItemBackground"
-    android:id="@+id/ll_pokazatZayavku">
+    android:onClick="onClick"
+    android:orientation="vertical"
+    android:weightSum="100">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
+        android:visibility="visible"
         android:weightSum="100">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="60"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,26 +34,31 @@
                 <TextView
                     android:id="@+id/tv_data"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="//data"
+                    android:layout_height="wrap_content"
                     android:layout_weight="40"
-                    android:textColor="@android:color/black"
-                    android:textAlignment="center"
                     android:gravity="center"
-                    />
+                    android:text="//data"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_code"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="23dp"
-                android:gravity="center"
-                android:text="//code"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:textAlignment="center"
-                />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="//code"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -64,78 +70,85 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="100">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:orientation="vertical"
-                    android:layout_weight="30">
+                    android:layout_height="match_parent"
+                    android:layout_weight="30"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/tv_otkuda"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="//otkuda"
-                        android:textColor="@android:color/black"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:gravity="center"
-                        />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_otpravitel"
+                        <TextView
+                            android:id="@+id/tv_otkuda"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="//otkuda"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="//otpravitel"
-                        android:textColor="@android:color/black"
-                        android:textAlignment="center"
-                        />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_otpravitel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="//otpravitel"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:orientation="vertical"
                     android:layout_weight="40"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/iv_strela"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_gruzovik_blue_24dp"
-                        />
+                        android:src="@drawable/ic_gruzovik_blue_24dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:orientation="vertical"
-                    android:layout_weight="30">
+                    android:layout_weight="30"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tv_kuda"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="//kuda"
-                        android:textColor="@android:color/black"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
-                        />
+                        android:text="//kuda"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_poluchatel"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
+                        android:layout_height="wrap_content"
                         android:text="//poluchatel"
-                        android:textColor="@android:color/black"
                         android:textAlignment="center"
-                        />
+                        android:textColor="@android:color/black" />
 
                 </LinearLayout>
 
@@ -146,32 +159,30 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_weight="70">
+            android:layout_weight="70"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_d"
                 android:layout_width="30dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
                 android:text="Д"
                 android:textAlignment="center"
-                android:textStyle="bold"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
-                />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_z"
                 android:layout_width="30dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/otpravitelRed"
                 android:text="З"
                 android:textAlignment="center"
-                android:textStyle="bold"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
-                />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -180,28 +191,28 @@
     <LinearLayout
         android:id="@+id/ll_moreInf"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:weightSum="100"
-        android:baselineAligned="false">
+        android:visibility="gone"
+        android:weightSum="100">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="50"
-            android:orientation="vertical"
-            android:background="@drawable/rectangle_field">
+            android:background="@drawable/rectangle_field"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_status"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
+                android:gravity="center"
                 android:text="//status"
                 android:textAlignment="center"
                 android:textColor="@color/otpravitelRed"
-                android:textSize="16sp"
-                android:gravity="center"
-                />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_document"
@@ -210,8 +221,7 @@
                 android:text="//document"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -225,12 +235,11 @@
                 android:id="@+id/tv_partner"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
+                android:gravity="center"
                 android:text="//partner"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:gravity="center"
-                />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/tv_tovar"
@@ -239,8 +248,7 @@
                 android:text="//tovar"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
