--- a/app/src/main/res/layout/activity_reception.xml
+++ b/app/src/main/res/layout/activity_reception.xml
@@ -395,6 +395,43 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView5"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Номер:" />
+
+                            <EditText
+                                android:id="@+id/sopnum"
+                                android:layout_width="81dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:inputType="textPersonName" />
+
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="44dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Дата:" />
+
+                            <EditText
+                                android:id="@+id/sopdate"
+                                android:layout_width="168dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:inputType="date" />
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:id="@+id/l1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
